--- a/public/style2.css
+++ b/public/style2.css
@@ -8,12 +8,12 @@ h1 {
 
 /* unvisited link */
 a:link {
-  color: #92b0a4;
+  color: #873979;
 }
 
 /* visited link */
 a:visited {
-  color: #92b0a4;
+  color: #873979;
 }
 
 /* mouse over link */
