--- a/public/style2.css
+++ b/public/style2.css
@@ -18,12 +18,12 @@ a:visited {
 
 /* mouse over link */
 a:hover {
-  color: #92b0a4;
+  color: #416e5d;
 }
 
 /* selected link */
 a:active {
-  color: #92b0a4;
+  color: #416e5d;
 }
 
 *{
